<resources>
    <string name="app_name">Kinisi</string>
    
    <!-- text inputs labels -->
    <string name="label_firstname">Firstname</string>
    <string name="label_lastname">Lastname</string>
    <string name="label_email">Email</string>
    <string name="label_gender">Gender</string>
    <string name="label_password">Password</string>
    <string name="label_repeat_password">Repeat password</string>
    <string name="label_birthday">Birthday</string>

    <!-- button text -->
    <string name="button_text_login">Login</string>
    <string name="button_text_register">Register</string>
</resources>
