<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".views.fragments.RegisterFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_normal_semi"
        android:paddingEnd="@dimen/spacing_normal_semi"
>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_double"
            android:layout_marginBottom="@dimen/spacing_double"
            android:hint="@string/label_firstname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    >

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_double"
            android:layout_marginBottom="@dimen/spacing_double"
            android:hint="@string/label_lastname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    >

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_double"
            android:layout_marginBottom="@dimen/spacing_double"
            android:hint="@string/label_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    >

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_double"
            android:layout_marginBottom="@dimen/spacing_double"
            android:hint="@string/label_gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
    >

        <AutoCompleteTextView
                android:id="@+id/exposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_double"
            android:layout_marginBottom="@dimen/spacing_double"
            android:text="@string/button_text_register"
    />

</LinearLayout>